Resolve white space appearing when info messages appear below the navbar by adding a bg color to the body

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,7 @@
 
 body {
     color: #F4E9CD;
+    background-color: #5E0B15;
     font-family: 'Convergence', sans-serif;
     margin:0;
 	padding:0;
